@@ -1,3 +1,5 @@
+2005/12/25 -- released version 20051225_trunk
+
 2005/12/24 -- released version 20051224_trunk
 
 2005/12/23 -- released version 20051223_trunk
